NM-2 Updated headers and logo

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css" />
+    <title>El Código de lo Oculto - 2357</title>
+    <link rel="icon" href="/_media/LogoAgenciaIA.png" type="image/png">
     <style type="text/css">
+        #main {
+            width: 100%;
+        }
         .content {
+            margin: 0 auto;
             max-width: 800px;
         }
     </style>
@@ -16,7 +22,6 @@
 <script>
     window.$docsify = {
         el: '#main',
-        logo: '/_media/LogoAgenciaIA.png',
         themeColor: '#6A42B4',
         name: '2357',
     };
